# ai-dev-orchestrator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/git/: __init__.py  exceptions.py  git_client.py  schemas.py  workspace_manager.py
app/github/: __init__.py  client.py  exceptions.py  graphql.py  issue_manager.py  project_manager.py  repository_manager.py  schemas.py
app/workflow/: __init__.py  exceptions.py  rules.py  schemas.py  selectors.py  workflow_engine.py
