[project]
name = "ai-dev-orchestrator"
version = "0.1.0"
description = "AI orchestrator for automating software development workflows"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.5.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
